--- a/contact.html
+++ b/contact.html
@@ -121,8 +121,7 @@
 						<ul>
 							<li>D-71 Near Masjid Saeediya  </li>
 							<li>New Seelampur Chauhan Banger Delhi-110054</li>
-							<li>Adil Khan : +91 98115 87722</li>
-							<li>Armaan Adil : +91 92052 04635</li>
+							<li>Hamza : +91 97183 86438</li>
 						</ul>
 					</div>
 				</div>
