--- a/products.html
+++ b/products.html
@@ -148,8 +148,7 @@
 							<li>Head Office : 23/11 , 790; Street No. 04, Chauhan Banger, Delhi-110053 </li>
                             <br>
                             <li>E-Mail : Jkmetalworks@gmail.com </li>
-							<li>Adil Khan : +91 98115 87722</li>
-							<li>Armaan Adil : +91 92052 04635</li>
+							<li>Hamza : +91 97183 86438</li>
 						</ul>
 					</div>
 				</div>
